kubernaties-playground/k8s/web-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web-depl
          image: mhshifat/kubernaties-playground-web
          resources:
            limits:
              memory: "525Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: web-srv
spec:
  type: ClusterIP
  selector:
    app: web
  ports:
    - name: web
      protocol: TCP
      targetPort: 3000
      port: 3000
